Added CSV support. MVP reached

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"token": "", "bot": {"plugins": ["plugins.archive", "plugins.help"]}}
+{"token": "", "debug": false, "bot": {"plugins": ["plugins.archive", "plugins.help"]}}
